--- a/roles/testrole/tasks/dependent.yml
+++ b/roles/testrole/tasks/dependent.yml
@@ -2,5 +2,6 @@
 - name: Hello from dependent
   debug: msg=hello
 
-- name: No var defined
-  debug: msg="{{ some_undefined }}"
+- debug:
+    msg: "{{ item }}"
+  with_items: "{{ some_undefined }}"
